force-app/main/default/objects/Preference__c/fields/Category_name__c.field-meta.xml
<CustomField>
    <fullName>Category_name__c</fullName>
    <label>Category name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>