force-app/main/default/objects/Preference__c/fields/Liked__c.field-meta.xml
<CustomField>
    <fullName>Liked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liked</label>
    <type>Checkbox</type>
</CustomField>