force-app/main/default/objects/Preference__c/fields/Preference_value__c.field-meta.xml
<CustomField>
    <fullName>Preference_value__c</fullName>
    <label>Preference value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>