force-app/main/default/objects/Preference__c/fields/Preference_value_code__c.field-meta.xml
<CustomField>
    <fullName>Preference_value_code__c</fullName>
    <label>Preference value code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>