force-app/main/default/objects/Preference__c/fields/Sales_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Assistant</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Preferences</relationshipLabel>
    <relationshipName>Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>